tools/sddl/assembler/tests/success/push_type_i16be.asm
push.type i16be
halt

