tools/sddl/assembler/tests/fail/push_type_typo.asm
push.type u32el
halt

